<?xml version="1.0"?>
<package format="3">
  <name>battery_monitor</name>
  <version>0.0.0</version>
  <description>Battery monitor node for TurtleBot4</description>

  <maintainer email="kuolu@pm.me">your_name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
